addressed the rest of Melissa's feedback

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -920,11 +920,19 @@ morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
 morley_hist
 ```
 
-The visualization in Figure \@ref(fig:03-data-morley-hist-4) now makes it quite clear how accurate the different experiments were with respect to one another. 
+The visualization in Figure \@ref(fig:03-data-morley-hist-4) 
+now makes it quite clear how accurate the different experiments were 
+with respect to one another. 
+The most variable measurements came from Experiment 1. 
+There the measurements ranged from about 650 - 1050 km / sec.
+The least variable measurements came from Experiment 2.
+There the measurements ranged from about 750 - 950 km / sec.
+The most different experiments still obtained quite similar results!
+
 There are two finishing touches to make this visualization even clearer. First and foremost, we need to add informative axis labels
 using the `labs` function, and increase the font size to make it readable using the `theme` function. Second, and perhaps more subtly, even though it 
 is easy to compare the experiments on this plot to one another, it is hard to get a sense 
-for just how accurate all the experiments were overall. For example, how accurate is the value 800 on the plot, relative to the true speed of light?
+of just how accurate all the experiments were overall. For example, how accurate is the value 800 on the plot, relative to the true speed of light?
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
 \index{ggplot!labs}\index{ggplot!theme}
 
@@ -961,10 +969,10 @@ Choosing the correct bin width for your problem
 is something that commonly takes iteration.
 It's usually a good idea to try out several bin widths.
 Let's do that here for the histogram we have been working on.
-In Figure \@ref(fig:03-data-morley-hist-binwidth)
+In Figure \@ref(fig:03-data-morley-hist-binwidth),
 we compare the default number of bins with three histograms where we set the 
 `binwidth` in `geom_histogram` to 0.001, 0.01 and 0.1.
-We can see that in this case, both the default number of bins 
+In this case, we can see that in this case, both the default number of bins 
 and the binwidth of 0.01 are effective for helping answer our question.
 Whereas the bin widths of 0.001 and 0.1 are too small and too big, respectively.
 
@@ -1014,8 +1022,8 @@ What if we want to add onto a `ggplot` plot object later in our analysis?
 Do we need to copy and paste the code we wrote previously 
 and then add on our new layers after that? No! 
 If we stored our `ggplot` plot as a named object
-using the assignment symbol (`<-`) then we can call that object 
-and add on to it using the `+` operator.
+using the assignment symbol (`<-`), we can call it 
+and add to it using the `+` operator.
 For example, if we wanted to add a title to the last plot we created, 
 named `morley_rel`, we can call the name of that plot, then the `+` operator, 
 and then add our code to create a title for the plot 
@@ -1042,7 +1050,7 @@ For example, you could use an exploratory visualization in the opening of the pr
 of a more detailed data analysis / model, a visualization of the results of your analysis to show what your analysis has uncovered,
 or even one at the end of a presentation to help suggest directions for future work. 
 
-Regardless of where it appears, a good way to discuss your visualization is as a story \index{visualization!explanation}:
+Regardless of where it appears, a good way to discuss your visualization is as a story\index{visualization!explanation}:
 
 1) Establish the setting and scope, and motivate why you did what you did. 
 2) Pose the question that your visualization answers. Justify why the question is important to answer.
@@ -1062,7 +1070,7 @@ Each of the steps is denoted by its numeral in parentheses, e.g. (3).
 **Mauna Loa Atmospheric CO$_{\text{2}}$ Measurements:** (1) \index{Mauna Loa CO2} Many current forms of energy generation and conversion---from automotive engines to natural gas power plants---rely on burning
 fossil fuels and produce greenhouse gases, typically primarily carbon dioxide (CO$_{\text{2}}$), as a byproduct. Too much of these gases in the Earth's atmosphere will cause it to trap
 more heat from the sun, leading to global warming. (2) In order to assess how quickly the atmospheric concentration of CO$_{\text{2}}$ is increasing over time, we (3) used a data set from
-the Mauna Loa observatory from Hawaii, consisting of CO$_{\text{2}}$ measurements from 1959 to the present. We plotted the measured concentration of CO$_{\text{2}}$ (on the vertical axis) over time
+the Mauna Loa observatory from Hawaii, consisting of CO$_{\text{2}}$ measurements from 1980 to 2020. We plotted the measured concentration of CO$_{\text{2}}$ (on the vertical axis) over time
 (on the horizontal axis). From this plot, you can see a clear, increasing, and generally linear trend over time. There is also a periodic oscillation that occurs once per year and
 aligns with Hawaii's seasons, with an amplitude that is small relative to the growth in the overall trend. This shows that atmospheric CO$_{\text{2}}$ is clearly increasing over 
 time, and (4) it is perhaps worth investigating more into the causes.
