clarified that regr can also be using for inf & causal q's and fixed some typos

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -3,8 +3,8 @@
 ## Overview 
 
 This chapter continues our foray into answering predictive questions.
-Here we will focus on *regression*, which is the process of predicting
-*numerical* variables.
+Here we will focus on predicting *numerical* variables 
+and will use *regression* to perform this task.
 This is unlike the past two chapters, which focused on predicting categorical
 variables via classification. However, regression does have many similarities
 to classification: for example, just as in the case of classification,
@@ -17,6 +17,9 @@ concepts that have already been covered.
 This chapter will primarily focus on the case where there is a single predictor, 
 but the end of the chapter shows how to perform
 regression with more than one predictor variable, i.e., *multivariate regression*.
+It is important to note that regression 
+can also be used to answer inferential and causal questions, 
+however that is beyond the scope of this book.
 
 ## Chapter learning objectives 
 By the end of the chapter, readers will be able to:
@@ -150,7 +153,7 @@ interested in purchasing, with an advertised list price of \$350,000. Should we
 offer to pay the asking price for this house, or is it overpriced and we should
 offer less? Absent any other information, we can get a sense for a good answer
 to this question by using the data we have to predict the sale price given the
-sale prices we have already observed. But in Figure \ref@(fig:07-small-eda-regr),
+sale prices we have already observed. But in Figure \@ref(fig:07-small-eda-regr),
 you can see that we have no
 observations of a house of size *exactly* 2,000 square feet. How can we predict
 the sale price? 
