--- a/viz.Rmd
+++ b/viz.Rmd
@@ -83,7 +83,7 @@ are as follows:
 - **bar plots** visualize comparisons of amounts
 - **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) \index{distribution}
 
-```{r plot-sketches, echo = FALSE, fig.width = 4.6, fig.height = 4.75, fig.align = 'center', fig.cap = "Examples of a scatter, line and bar plots, as well as histograms."}
+```{r plot-sketches, echo = FALSE, fig.width = 4.6, fig.height = 4.75, fig.align = 'center', fig.cap = "Examples of scatter, line and bar plots, as well as histograms."}
 set.seed(1)
 
 scatter_plot <- tibble(x = seq(0.25, 10, by = 0.5) + rnorm(20, 1, 1.5),
