gave more context to interpreting the house price prediction test error.

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -536,8 +536,9 @@ sacr_summary <- sacr_fit |>
 
 sacr_summary
 ```
+
 Our final model's test error as assessed by RMSPE 
-is `r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
+is $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
 Note that RMSPE is measured in the same units as the response variable.
 In other words, on new observations, we expect the error in our prediction to be 
 *roughly* $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
@@ -547,6 +548,16 @@ to new data that it has never seen before.
 However, much like in the case of KNN classification, whether this value for RMSPE is *good*&mdash;i.e.,
 whether an error of around $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`
 is acceptable&mdash;depends entirely on the application. 
+
+In this application, purchase of a home, 
+$`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)` 
+is not a terrible error, but it is not that great either. 
+The y-axis scale is about $`r format(round(800000), big.mark=",", nsmall=0, scientific=FALSE)`, 
+and the error is about 10% of that. 
+Depending on someone's budget, a difference of 
+$`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)` 
+could make or break whether or not they could afford put an offer on a house. 
+At least in the low-mid-range of the data.
 
 Finally, Figure \@ref(fig:07-predict-all) shows the predictions that our final model makes across
 the range of house sizes we might encounter in the Sacramento area&mdash;from 500 to 5000 square feet. 
