added CV RMSE value to paragraph discussing test error and moved strenghts and weaknesses to the end of the chapter.

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -543,7 +543,9 @@ Note that RMSPE is measured in the same units as the response variable.
 In other words, on new observations, we expect the error in our prediction to be 
 *roughly* $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
 From one perspective, this is good news: this is about the same as the cross-validation
-RMSPE estimate of our tuned model, so we can say that the model appears to generalize well
+RMSPE estimate of our tuned model 
+(which was $`r format(round(sacr_min |> pull(mean)), big.mark=",", nsmall=0, scientific=FALSE)`), 
+so we can say that the model appears to generalize well
 to new data that it has never seen before.
 However, much like in the case of KNN classification, whether this value for RMSPE is *good*&mdash;i.e.,
 whether an error of around $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`
@@ -581,23 +583,6 @@ plot_final <- ggplot() +
 
 plot_final
 ```
-
-## Strengths and limitations of KNN regression
-
-As with KNN classification (or any prediction algorithm for that matter), KNN 
-regression has both strengths and weaknesses. Some are listed here:
-
-**Strengths:** K-nearest neighbours regression
-
-1. is a simple, intuitive algorithm
-2. requires few assumptions about what the data must look like 
-3. works well with non-linear relationships (i.e., if the relationship is not a straight line)
-
-**Weaknesses:** K-nearest neighbours regression
-
-1. becomes very slow as the training data gets larger
-2. may not perform well with a large number of predictors
-3. may not predict well beyond the range of values input in your training data
 
 ## Multivariate KNN regression
 
@@ -752,3 +737,20 @@ predictions. For example, in this model we would predict that the cost of a
 house with a size of 2,500 square feet generally increases slightly as the number
 of bedrooms increases. Without having the additional predictor of number of
 bedrooms, we would predict the same price for these two houses.
+
+## Strengths and limitations of KNN regression
+
+As with KNN classification (or any prediction algorithm for that matter), KNN 
+regression has both strengths and weaknesses. Some are listed here:
+
+**Strengths:** K-nearest neighbours regression
+
+1. is a simple, intuitive algorithm
+2. requires few assumptions about what the data must look like 
+3. works well with non-linear relationships (i.e., if the relationship is not a straight line)
+
+**Weaknesses:** K-nearest neighbours regression
+
+1. becomes very slow as the training data gets larger
+2. may not perform well with a large number of predictors
+3. may not predict well beyond the range of values input in your training data
