removed forward reference to linear regression

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -220,6 +220,14 @@ classification: which $K$ do we choose, and is our model any good at making
 predictions? In the next few sections, we will address these questions in the
 context of KNN regression.
 
+One strength of the KNN regression algorithm 
+that we would like to draw attention to at this point
+is its ability to work well with non-linear relationships
+(i.e., if the relationship is not a straight line).
+This stems from the use of nearest neighbours to predict values.
+The algorithm really has very few assumptions 
+about what the data must look like for it to work.
+
 ## Training, evaluating, and tuning the model
 
 As usual, we must start by putting some test data away in a lock box that we
