moved note on not needing to standardize to beneath recipe

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -51,7 +51,7 @@ straight line of best fit through the training data and then
 > logistic regression. After reading this chapter, see the "Additional Resources" section at the end of the
 > classification chapters to learn more about logistic regression. \index{regression!logistic}
 
-Let's return to the Sacramento housing data \index{Sacramento real estate} from the previous chapter to learn
+Let's return to the Sacramento housing data \index{Sacramento real estate} from the Chapter \@ref(regression1) to learn
 how to apply linear regression and compare it to KNN regression. For now, we
 will consider 
 a smaller version of the housing data to help make our visualizations clear.
@@ -166,13 +166,6 @@ Below we illustrate how we can use the usual `tidymodels` workflow to predict ho
 price given house size using a simple linear regression approach using the full
 Sacramento real estate data set.
 
-> An additional difference that you will notice below is that we do not standardize \index{standardization}
-> (i.e., scale and center) our predictors. In K-nearest neighbours models, recall that 
-> the model fit changes depending on whether we standardize first or not. In linear regression,
-> standardization does not affect the fit (it *does* affect the coefficients in the equation, though!).
-> So you can standardize if you want&mdash;it won't hurt anything&mdash;but if you leave the
-> predictors in their original form, the best fit coefficients are usually easier to interpret afterward.
-
 As usual, we start by loading packages, setting the seed, loading data, and putting some test data away in a lock box that we
 can come back to after we choose our final model. Let's take care of that now.
 \index{seed!set.seed}
@@ -205,6 +198,14 @@ lm_fit <- workflow() |>
   fit(data = sacramento_train)
 lm_fit
 ```
+
+> An additional difference that you will notice below is that we do not standardize \index{standardization}
+> (i.e., scale and center) our predictors. In K-nearest neighbours models, recall that 
+> the model fit changes depending on whether we standardize first or not. In linear regression,
+> standardization does not affect the fit (it *does* affect the coefficients in the equation, though!).
+> So you can standardize if you want&mdash;it won't hurt anything&mdash;but if you leave the
+> predictors in their original form, the best fit coefficients are usually easier to interpret afterward.
+
 Our coefficients are 
 (intercept) $\beta_0=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)`
 and (slope) $\beta_1=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`.
