reordered canlang to make sure the final plot answers the Q (no additional work after...)

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -486,7 +486,12 @@ Recall the `can_lang` data set [@timbers2020canlang] from Chapters \@ref(intro),
 \index{Canadian languages} which contains counts of languages from the 2016
 Canadian census.
 
-**Question:** \index{question!visualization} Is there a relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home? And is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)?
+**Question:** \index{question!visualization} Is there a relationship between
+the percentage of people who speak a language as their mother tongue and 
+the percentage for whom that is the primary language spoken at home?
+And is there a pattern in the strength of this relationship in the
+higher-level language categories (Official languages, Aboriginal languages, or
+non-official and non-Aboriginal languages)?
 
 ```{r 03-canlang-example, message = F, warning = F}
 can_lang <- read_csv("data/can_lang.csv")
@@ -581,34 +586,6 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = label_comma())
 ```
 
-Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale) is the appropriate
-visualization to use to answer the first question in this section, i.e.,
-whether there is a relationship between the number of people who speak 
-a language as their mother tongue and the number of people who speak 
-that language as their primary spoken language at home.
-To fully answer the question, we need to use
- Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale) 
-to assess a few key characteristics of the data: 
-
-- **Direction:** if the y variable tends to increase when the x variable increases, then y has a **positive** relationship with x. If 
-  y tends to decrease when x increases, then y has a **negative** relationship with x. If y does not meaningfully increase or decrease 
-  as x increases, then y has **little or no** relationship with x. \index{relationship!positive,negative,none}
-- **Strength:** if the y variable *reliably* increases, decreases, or stays flat as x increases,
-  then the relationship is **strong**. Otherwise, the relationship is **weak**. Intuitively, \index{relationship!strong,weak}
-  the relationship is strong when the scatter points are close together and look more like a "line" or "curve" than a "cloud."
-- **Shape:** if you can draw a straight line roughly through the data points, the relationship is **linear**. Otherwise, it is **nonlinear**. \index{relationship!linear,nonlinear}
-
-In Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale), we see that 
-as the number of people who have a language as their mother tongue increases, 
-so does the number of people who speak that language at home. 
-Therefore, there is a **positive** relationship between these two variables.
-Furthermore, because the points in Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale) 
-are fairly close together, and the points look more like a "line" than a "cloud",
-we can say that this is a **strong** relationship. 
-And finally, because drawing a straight line through these points in 
-Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale)
-would fit the pattern we observe quite well, we say that the relationship is **linear**.
-
 ```{r 03-changing_the_units, include = FALSE}
 english_mother_tongue <- can_lang |>
   filter(language == "English") |>
@@ -616,10 +593,9 @@ english_mother_tongue <- can_lang |>
 census_popn <- 35151728
 ```
 
-Similar to our example in Chapter \@ref(wrangling), 
+Similar to some of the examples in Chapter \@ref(wrangling), 
 we can convert the counts to percentages to give them context 
-and make them more meaningful. 
-Changing the units allows us to better interpret the numbers in our data set. 
+and make them easier to understand.
 We can do this by dividing the number of people reporting a given language 
 as their mother tongue or primary language at home 
 by the number of people who live in Canada and multiplying by 100\%. 
@@ -662,6 +638,34 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   scale_x_log10(labels = comma) +
   scale_y_log10(labels = comma)
 ```
+
+Figure \@ref(03-mother-tongue-vs-most-at-home-scale-props) is the appropriate
+visualization to use to answer the first question in this section, i.e.,
+whether there is a relationship between the percentage of people who speak 
+a language as their mother tongue and the percentage for whom that
+is the primary language spoken at home.
+To fully answer the question, we need to use
+ Figure \@ref(03-mother-tongue-vs-most-at-home-scale-props)
+to assess a few key characteristics of the data: 
+
+- **Direction:** if the y variable tends to increase when the x variable increases, then y has a **positive** relationship with x. If 
+  y tends to decrease when x increases, then y has a **negative** relationship with x. If y does not meaningfully increase or decrease 
+  as x increases, then y has **little or no** relationship with x. \index{relationship!positive,negative,none}
+- **Strength:** if the y variable *reliably* increases, decreases, or stays flat as x increases,
+  then the relationship is **strong**. Otherwise, the relationship is **weak**. Intuitively, \index{relationship!strong,weak}
+  the relationship is strong when the scatter points are close together and look more like a "line" or "curve" than a "cloud."
+- **Shape:** if you can draw a straight line roughly through the data points, the relationship is **linear**. Otherwise, it is **nonlinear**. \index{relationship!linear,nonlinear}
+
+In Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props), we see that 
+as the percentage of people who have a language as their mother tongue increases, 
+so does the percentage of people who speak that language at home. 
+Therefore, there is a **positive** relationship between these two variables.
+Furthermore, because the points in Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props) 
+are fairly close together, and the points look more like a "line" than a "cloud",
+we can say that this is a **strong** relationship. 
+And finally, because drawing a straight line through these points in 
+Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props)
+would fit the pattern we observe quite well, we say that the relationship is **linear**.
 
 Onto the second part of our exploratory data analysis question!
 Recall that we are interested in knowing whether the strength 
@@ -710,6 +714,17 @@ From Figure \@ref(fig:rcolorbrewer),
 we can choose the color palette we want to use in our plot. 
 To change the color palette, 
 we add the `scale_color_brewer` layer indicating the palette we want to use. 
+You can use 
+this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) to check 
+if your visualizations \index{color palette!color blindness simulator} 
+are color-blind friendly.
+Additionally, the `ggthemes` R package also has a [color-blind friendly color palette](https://jrnold.github.io/ggthemes/reference/colorblind.html).
+Below we pick the `"Set2"` palette, with the result shown
+in Figure \@ref(fig:scatter-color-by-category-palette).
+We also set the `shape` aesthetic mapping to the `category` variable as well;
+this makes the scatter point shapes different for each category. This kind of 
+visual redundancy&mdash;i.e., conveying the same information with both scatter point color and shape&mdash;can
+further improve the clarity and accessibility of your visualization.
 
 ```{r scatter-color-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
@@ -721,12 +736,6 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
   scale_y_log10(labels = comma) +
   scale_color_brewer(palette = "Set2")
 ```
-
-You can use 
-this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) to check 
-if your visualizations \index{color palette!color blindness simulator} 
-are color-blind friendly.
-Additionally, the `ggthemes` R package also has a [color-blind friendly color palette](https://jrnold.github.io/ggthemes/reference/colorblind.html).
 
 From the visualization in Figure \@ref(fig:scatter-color-by-category-palette), 
 we can now clearly see that the vast majority of Canadians reported one of the official languages 
@@ -753,6 +762,7 @@ Answering those questions often involves doing more complex analyses, and someti
 even gathering additional data. We will see more of such complex analyses in later on in 
 this book.  
 
+<!--
 Finally, we can go one step further and distinguish English and French languages
 with different colors in our visualization. To separate these languages, we
 will filter the rows where the language is either English or French and mutate
@@ -793,6 +803,7 @@ ggplot(can_lang, aes(
   scale_y_log10(labels = comma) + 
   scale_color_brewer(palette = "RdYlBu")
 ```
+-->
 
 ### Bar plots: the island landmass data set
 The `islands.csv` data set \index{Island landmasses} contains a list of Earth's landmasses as well as their area (in thousands of square miles) [@islandsdata]. 
